--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "livecontrol/eloquent-datatable": "^0.1.5",
-        "yajra/laravel-datatables-oracle": "^8.13"
+        "yajra/laravel-datatables-oracle": "^8.13",
+        "guzzlehttp/guzzle": "~5.3|~6.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
